--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
           <a class="nav-link" routerLink="products" routerLinkActive="router-link-active" >Products</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="conversor" routerLinkActive="router-link-active">Conversor</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="contact" routerLinkActive="router-link-active">Contact</a>
         </li>
       </ul>
