--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
           <a class="nav-link" routerLink="" routerLinkActive="router-link-active" >Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="dashboard" routerLinkActive="router-link-active">Dashboard</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="products" routerLinkActive="router-link-active" >Products</a>
         </li>
         <li class="nav-item">
