se agrega dashboard de angular material

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
-<div class="row mt-4">
+
+<app-navigation></app-navigation>
+<!-- <div class="row mt-4">
     <div class="col-1 mx-3">
         <div class="example-button-row mb-3">
             <button mat-raised-button (click)="graficoBarra()">Barra</button>
@@ -47,5 +49,5 @@
             </div>
         </div>
     }
-</div>
+</div> -->
 
