--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,9 +6,10 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <label for="">Modalidades</label>
+      <a mat-list-item href="#">Taxi</a>
+      <a mat-list-item href="#">Autobus</a>
+      <a mat-list-item href="#">Carga</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
