--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,7 +6,8 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <label for="">Modalidades</label>
+      <label for="" class="mt-3" >Modalidades</label>
+      <a mat-list-item href="dashboard">General</a>
       <a mat-list-item href="#">Taxi</a>
       <a mat-list-item href="#">Autobus</a>
       <a mat-list-item href="#">Carga</a>
