--- a/src/app/dashboard1/dashboard1.component.html
+++ b/src/app/dashboard1/dashboard1.component.html
@@ -1,22 +1,22 @@
 <div class="grid-container">
   <h1 class="mat-h1"></h1>
-  <mat-grid-list cols="2" rowHeight="450px">
+  <mat-grid-list cols="3" rowHeight="400px">
     @for (card of cards | async; track card) {
       <mat-grid-tile [colspan]="card.cols" [rowspan]="card.rows">
-        <mat-card class="dashboard-card">
+        <mat-card class="dashboard-card" [ngStyle]="{'background': card.gradient}" >
           <mat-card-header>
             <mat-card-title>
               {{card.title}}
-              <!-- <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+              <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu #menu="matMenu" xPosition="before">
                 <button mat-menu-item>Expand</button>
                 <button mat-menu-item>Remove</button>
-              </mat-menu> -->
+              </mat-menu>
             </mat-card-title>
           </mat-card-header>
-          <mat-card-content class="dashboard-card-content text-center">
+          <mat-card-content class="dashboard-card-content">
             <!-- <div>Card Content Here</div> -->
             <!-- <canvas baseChart
               [data]="barChartData"
@@ -25,8 +25,9 @@
               [legend]="barChartLegend"
               [type]="'bar'">
             </canvas> -->
-
-            <canvas [id]="card.chartId" ></canvas>
+            <div class="chart-container">
+              <canvas [id]="card.chartId" ></canvas>
+            </div>
             
             
           </mat-card-content>
