--- a/src/app/dashboard1/dashboard1.component.html
+++ b/src/app/dashboard1/dashboard1.component.html
@@ -11,8 +11,8 @@
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu #menu="matMenu" xPosition="before">
-                <button mat-menu-item>Expand</button>
-                <button mat-menu-item>Remove</button>
+                <button mat-menu-item (click)="expandCard(card)" >Expand</button>
+                <button mat-menu-item (click)="removeCard(card)" >Remove</button>
               </mat-menu>
             </mat-card-title>
           </mat-card-header>
